Updated tests for JsonWriter class